Changed quantity number and linked navbar pages

--- a/mysite/Rent/templates/Rent/rental.html
+++ b/mysite/Rent/templates/Rent/rental.html
@@ -22,9 +22,9 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="rental.html">Rentals</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="{% url 'mysite:home' %}">Home</a></li>
+                <li class="active"><a href="{% url 'mysite:rental' %}">Rentals</a></li>
+                <li><a href="{% url 'mysite:contact' %}">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -40,7 +40,7 @@
                 <p class='description'>Size: 15' W x 15' H x 15'L</p>
                 <p class='description'>Power Required: 1 x 15amp outlet</p>
                 <label for="Castle">Quantity: </label>
-                <text id='Castle'>0
+                <text id='Castle'>20
                 </text>
                 <br>
                 <label>Price: </label>
@@ -65,7 +65,7 @@
                 <p class='description'>Size: 14' W x 17' H x 14'L</p>
                 <p class='description'>Power Required: 1 x 15amp outlet</p>
                 <label for="Sports">Quantity: </label>
-                <text id='Sports'>0
+                <text id='Sports'>20
               </text>
                 <br>
                 <label>Price: </label>
@@ -89,7 +89,7 @@
                 <p class='description'>Size: 19' W x 15' H x 18' L</p>
                 <p class='description'>Power Required: 2 x 15amp outlet</p>
                 <label for="Princess">Quantity: </label>
-                <text id='Princess'>0
+                <text id='Princess'>20
               </text>
                 <br>
                 <label>Price: </label>
@@ -113,7 +113,7 @@
                 <p class='description'>Size: 14' W x 22' H x 29' L</p>
                 <p class='description'>Power Required: 2 x 15 amp outlet</p>
                 <label for="Dolphin">Quantity: </label>
-                <text id='Dolphin'>0
+                <text id='Dolphin'>20
               </text>
                 <br>
                 <label>Price: </label>
@@ -138,7 +138,7 @@
                 <p class='description'>Size: 15' W x 15' H x 15'L</p>
                 <p class='description'>Power Required: 2 x 15amp outlet</p>
                 <label for="Elephant">Quantity: </label>
-                <text id='Elephant'>0
+                <text id='Elephant'>20
               </text>
                 <br>
                 <label>Price: </label>
@@ -163,7 +163,7 @@
                 <p class='description'>Size: 13' W x 14' H x 32' L</p>
                 <p class='description'>Power Required: 2 x 15amp outlet</p>
                 <label for="Slide">Quantity: </label>
-                <text id='Slide'>0
+                <text id='Slide'>20
               </text>
                 <br>
                 <label>Price: </label>
