--- a/mysite/Rent/templates/Rent/contact.html
+++ b/mysite/Rent/templates/Rent/contact.html
@@ -21,9 +21,9 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="rental.html">Rentals</a></li>
-                <li class="active"><a href="contact.html">Contact</a></li>
+                <li><a href="{% url 'mysite:home' %}">Home</a></li>
+                <li><a href="{% url 'mysite:rental' %}">Rentals</a></li>
+                <li class="active"><a href="{% url 'mysite:contact' %}">Contact</a></li>
             </ul>
         </div>
     </nav>
