Added inputs inside forms to replace buttons

--- a/mysite/Rent/templates/Rent/rental.html
+++ b/mysite/Rent/templates/Rent/rental.html
@@ -47,8 +47,10 @@
                 <text>$100</text>
             </div>
             <div>
-                <button onclick="addToCart('Castle')">Add To Cart</button>
-                <button onclick="removeFromCart('Castle')">Remove From Cart</button>
+              <form action="rental">
+                <input type="submit" value="Add To Cart"></input>
+                <input type="submit" value="Remove From Cart"></input>
+              </form>
             </div>
         </div>
     </div>
@@ -72,8 +74,10 @@
                 <text>$100</text>
             </div>
             <div>
-                <button onclick="addToCart('Sports')">Add To Cart</button>
-                <button onclick="removeFromCart('Sports')">Remove From Cart</button>
+              <form action="rental">
+                <input type="submit" value="Add To Cart"></input>
+                <input type="submit" value="Remove From Cart"></input>
+              </form>
             </div>
         </div>
     </div>
@@ -96,8 +100,10 @@
                 <text>$100</text>
             </div>
             <div>
-                <button onclick="addToCart('Princess')">Add To Cart</button>
-                <button onclick="removeFromCart('Princess')">Remove From Cart</button>
+              <form action="rental">
+                <input type="submit" value="Add To Cart"></input>
+                <input type="submit" value="Remove From Cart"></input>
+              </form>
             </div>
         </div>
     </div>
@@ -121,8 +127,10 @@
                 </p>
             </div>
             <div>
-                <button onclick="addToCart('Dolphin')">Add To Cart</button>
-                <button onclick="removeFromCart('Dolphin')">Remove From Cart</button>
+              <form action="rental">
+                <input type="submit" value="Add To Cart"></input>
+                <input type="submit" value="Remove From Cart"></input>
+              </form>
             </div>
         </div>
     </div>
@@ -146,8 +154,10 @@
                 </p>
             </div>
             <div>
-                <button onclick="addToCart('Elephant')">Add To Cart</button>
-                <button onclick="removeFromCart('Elephant')">Remove From Cart</button>
+              <form action="rental">
+                <input type="submit" value="Add To Cart"></input>
+                <input type="submit" value="Remove From Cart"></input>
+              </form>
             </div>
         </div>
     </div>
@@ -171,8 +181,10 @@
                 </p>
             </div>
             <div>
-                <button onclick="addToCart('Slide')">Add To Cart</button>
-                <button onclick="removeFromCart('Slide')">Remove From Cart</button>
+              <form action="rental">
+                <input type="submit" value="Add To Cart"></input>
+                <input type="submit" value="Remove From Cart"></input>
+              </form>
             </div>
         </div>
     </div>
