--- a/mysite/Rent/static/rent.css
+++ b/mysite/Rent/static/rent.css
@@ -12,6 +12,13 @@ p {
     padding: 0;
 }
 
+.info {
+  font-size: 115%;
+  font-family: 'Tenor Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 #two li {
     font-size: 135%;
     font-family: 'Tenor Sans', sans-serif;
